<resources>
    <string name="app_name">Book Store</string>

    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <string name="action_delete_all_entries">Delete All Books</string>

    <string name="editor_activity_title_new_book">Add a Book</string>

    <string name="editor_activity_title_edit_book">Edit Book</string>

    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>

    <string name="category_overview">Overview</string>

    <string name="category_quantity">Quantity</string>

    <string name="category_supplier_name">Supplier Name</string>

    <string name="hint_book_name">Book Name</string>

    <string name="hint_book_price">Price</string>

    <string name="hint_book_supplier_name">Supplier Name</string>

    <string name="hint_book_supplier_phone_number">Supplier Phone Number</string>

    <string name="category_supplier_phone_number">Supplier Phone Number</string>

    <string name="empty_view_title_text">Book Store is empty</string>

    <string name="empty_view_subtitle_text">Click on the below add button to insert a book in the inventory and fill all the fields.</string>

    <string name="editor_insert_book_failed">There was an error with insertion.</string>

    <string name="editor_insert_book_successful">The insertion was successful</string>

    <string name="editor_update_book_failed">There was an error with the update.</string>

    <string name="editor_update_book_successful">The update was successful</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <string name="delete_dialog_msg">Delete this book?</string>

    <string name="editor_delete_book_successful">Book deleted</string>

    <string name="editor_delete_book_failed">Error with deleting Book</string>

    <string name="price">Price: </string>

    <string name="quantity">Quantity: </string>

    <string name="negative_quantity_message">Quantity cannot be reduced</string>

    <string name="dummy_name">The Lord of the Rings</string>

    <string name="dummy_price">1250</string>

    <string name="dummy_quantity">1</string>

    <string name="dummy_supplier_name">J.R.R. Tolkien</string>

    <string name="dummy_supplier_phone">9853363536</string>

    <string name="rows_deleted"> rows deleted from Book database</string>

    <string name="contact">Contact</string>

    <string name="add">+</string>

    <string name="subtract">-</string>

    <string name="zero">0</string>

    <string name="sale">SALE</string>

    <string name="empty_fields">All fields are necessary</string>
</resources>