<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:padding="@dimen/cardview_compat_inset_shadow"
        android:elevation="1dp"
        android:layout_margin="@dimen/cardview_compat_inset_shadow"
        card_view:cardCornerRadius="4dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:layout_height="@dimen/list_item_height"
            android:minHeight="@dimen/list_item_height">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingTop="8dp">
                <TextView
                    android:id="@+id/book_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Book Name"
                    android:textAppearance="?android:textAppearanceLarge" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        tools:text="Price : "
                        android:textAppearance="?android:textAppearanceMedium" />
                    <TextView
                        android:id="@+id/book_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="15000"
                        android:textAppearance="?android:textAppearanceMedium" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity"
                        tools:text="Quantity : "
                        android:textAppearance="?android:textAppearanceMedium" />

                    <TextView
                        android:id="@+id/book_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="1"
                        android:textAppearance="?android:textAppearanceMedium" />
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/sale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sale"
                android:layout_gravity="center"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>